--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -29,32 +29,29 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:srcCompat="@drawable/logo" />
 
-    <TextView
+    <id.amita.gudangaja.widget.text.TextTitleLarge
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="24sp"
         android:text="Welcome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-    <TextView
+    <id.amita.gudangaja.widget.text.TextBodyNormal
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="Discover your healthy kitchen and daily needs directly from the farmers just in one apps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <id.amita.gudangaja.widget.button.ButtonFill
         android:id="@+id/extendedFloatingActionButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -62,27 +59,19 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="52dp"
         android:text="Login"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/extendedFloatingActionButton2"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+
+    <id.amita.gudangaja.widget.button.ButtonOutline
         android:id="@+id/extendedFloatingActionButton2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
-        app:strokeWidth="2dp"
-        android:backgroundTint="?android:attr/windowBackground"
-        app:strokeColor="@color/teal_700"
         android:layout_marginBottom="54dp"
         android:text="Register"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/teal_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/extendedFloatingActionButton" />
