[FEATURE] Login [FEATURE] Register

--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <id.amita.gudangaja.widget.button.ButtonFill
-        android:id="@+id/extendedFloatingActionButton"
+        android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -61,26 +61,12 @@
         android:layout_marginBottom="52dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/extendedFloatingActionButton2"
+        app:layout_constraintEnd_toStartOf="@+id/btn_register"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <id.amita.gudangaja.widget.field.WidgetTextField
-        android:id="@+id/edt_text_field"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:label="Coba aja test"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:prefixText="+62"
-        app:suffixText="Kg" />
 
 
     <id.amita.gudangaja.widget.button.ButtonOutline
-        android:id="@+id/extendedFloatingActionButton2"
+        android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -89,6 +75,6 @@
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/extendedFloatingActionButton" />
+        app:layout_constraintStart_toEndOf="@+id/btn_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
